name:                p1
version:             0.1
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs:       src
  Exposed-Modules:      P1
  build-depends:        base == 4.14.0.0
                      , network == 2.6.3.6
  default-language:     Haskell2010
  ghc-options:          -Wall
