cabal-version:       3.4
name:                p1
version:             0.1
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:       src
  Exposed-Modules:      P1
  build-depends:        base ^>= 4.16.4.0
                      , network-simple
  ghc-options:          -Wall
